src/objects/ErrorLog_MDSR__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name_MDSR__c</fullName>
        <label>Application Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArchiveFilePath_MDSR__c</fullName>
        <label>Archive File Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CriteriaEndDate_MDSR__c</fullName>
        <label>Criteria End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CriteriaStartDate_MDSR__c</fullName>
        <label>Criteria Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_MDSR__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ErrorFilePath_MDSR__c</fullName>
        <label>Error File Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorMessage_MDSR__c</fullName>
        <label>Error Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code_MDSR__c</fullName>
        <label>Error Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REQ_VAL_MISSING</fullName>
                </value>
                <value>
                    <fullName>LOOKUP_ERROR</fullName>
                </value>
                <value>
                    <fullName>PROCESSING_ERROR</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>ONEMD_MIDDLEWARE_ERROR</fullName>
                </value>
                <value>
                    <fullName>TARGET_MIDDLEWARE_ERROR</fullName>
                </value>
                <value>
                    <fullName>TARGET_ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failed_Count_MDSR__c</fullName>
        <label>Failed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncludeInactive_MDSR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncludeInactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <label>Interface Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Notification</fullName>
                </value>
                <value>
                    <fullName>Order Notification</fullName>
                </value>
                <value>
                    <fullName>Replenishment Order</fullName>
                </value>
                <value>
                    <fullName>Asset Create</fullName>
                </value>
                <value>
                    <fullName>Asset Software Version Update</fullName>
                </value>
                <value>
                    <fullName>Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Lot</fullName>
                </value>
                <value>
                    <fullName>Asset Update</fullName>
                </value>
                <value>
                    <fullName>Unity Complaint Create Interface</fullName>
                </value>
                <value>
                    <fullName>3rd Party Work Order Upload</fullName>
                </value>
                <value>
                    <fullName>Work Order Create</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Unity Complaint Create</fullName>
                </value>
                <value>
                    <fullName>Inventory Snapshot</fullName>
                </value>
                <value>
                    <fullName>Unity Asset Sync</fullName>
                </value>
                <value>
                    <fullName>Unity Work Order Update</fullName>
                </value>
                <value>
                    <fullName>MDC Asset Extract Incremental</fullName>
                </value>
                <value>
                    <fullName>MDC Asset Extract Full</fullName>
                </value>
                <value>
                    <fullName>MDC Product Extract</fullName>
                </value>
                <value>
                    <fullName>MDC Country Extract</fullName>
                </value>
                <value>
                    <fullName>Work Order Dispatch</fullName>
                </value>
                <value>
                    <fullName>Parts Consumption</fullName>
                </value>
                <value>
                    <fullName>Order Update</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <label>Interface Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Bulk API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSON_MDSR__c</fullName>
        <label>JSON</label>
        <length>80000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id_MDSR__c</fullName>
        <label>Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddlewareTrackingId_MDSR__c</fullName>
        <label>Middleware Tracking Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectKey_MDSR__c</fullName>
        <label>Object Key</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_MDSR__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingCompany_MDSR__c</fullName>
        <label>Operating Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundCalloutEndTime_MDSR__c</fullName>
        <inlineHelpText>Outbound Callout – End Time</inlineHelpText>
        <label>Outbound Callout – End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutboundCalloutStartTime_MDSR__c</fullName>
        <label>Outbound Callout – Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Middleware_Tracking_Id__c</fullName>
        <label>Parent Middleware Tracking Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayloadCreationEndTime_MDSR__c</fullName>
        <label>Payload Creation –End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processed_Count_MDSR__c</fullName>
        <label>Sent/Received Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessingEndTime_MDSR__c</fullName>
        <label>Processing – End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessingStartTime_MDSR__c</fullName>
        <label>Processing – Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Id_MDSR__c</fullName>
        <label>Request Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseProcessingEndTime_MDSR__c</fullName>
        <inlineHelpText>Outbound Response Processing – End Time</inlineHelpText>
        <label>Response Processing – End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ResponseProcessingStartTime_MDSR__c</fullName>
        <inlineHelpText>Outbound Response Processing – Start Time</inlineHelpText>
        <label>Response Processing – Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SourceTarget_MDSR__c</fullName>
        <label>Source/Target</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split_Count__c</fullName>
        <label>Split Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_MDSR__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_MDSR__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Interface_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Id_MDSR__c</columns>
        <columns>Object_MDSR__c</columns>
        <columns>Date_MDSR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ELN-{000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>